--- a/java/quarkus-sample-rest/src/main/docker/Dockerfile.legacy-jar
+++ b/java/quarkus-sample-rest/src/main/docker/Dockerfile.legacy-jar
@@ -1,5 +1,5 @@
 ####
-# This Dockerfile is used in order to build a container that runs the Quarkus application in JVM mode
+# This Dockerfile is used in shoppingCart to build a container that runs the Quarkus application in JVM mode
 #
 # Before building the container image run:
 #
