--- a/java/quarkus-sample-rest/src/main/docker/Dockerfile.native-micro
+++ b/java/quarkus-sample-rest/src/main/docker/Dockerfile.native-micro
@@ -1,5 +1,5 @@
 ####
-# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode.
+# This Dockerfile is used in shoppingCart to build a container that runs the Quarkus application in native (no JVM) mode.
 # It uses a micro base image, tuned for Quarkus native executables.
 # It reduces the size of the resulting container image.
 # Check https://quarkus.io/guides/quarkus-runtime-base-image for further information about this image.
