--- a/python/jude/v1/Dockerfile
+++ b/python/jude/v1/Dockerfile
@@ -2,9 +2,13 @@ FROM python:3.11
 
 ENV DB_CONNECTION_STRING=???LOL???
 
+RUN mkdir -p /usr/app
+COPY *py /usr/app/
+
 WORKDIR /usr/app
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+
 
 CMD ["gunicorn", "--config=app.conf.py", "app:create"]
