[JUDE PY V1] Config change and pool resize

--- a/python/jude/v1/Dockerfile
+++ b/python/jude/v1/Dockerfile
@@ -2,11 +2,10 @@ FROM python:3.11
 
 ENV DB_CONNECTION_STRING=???LOL???
 
-RUN mkdir -p /usr/app
-COPY *py /usr/app/
-
 WORKDIR /usr/app
 
+COPY app.conf.py /usr/app/
+COPY app.py /usr/app/
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
