--- a/python/jude/v1/Dockerfile
+++ b/python/jude/v1/Dockerfile
@@ -1,13 +1,18 @@
-FROM python:3.11
+FROM ubuntu
 
 ENV DB_CONNECTION_STRING=???LOL???
 
 WORKDIR /usr/app
 
-COPY app.conf.py /usr/app/
-COPY app.py /usr/app/
+RUN apt-get update -y
+RUN apt-get install build-essential -y
+RUN apt-get install libpq-dev -y
+RUN apt-get install python3.11-dev -y
+RUN apt-get install curl -y
+RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11
+
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-
 
 CMD ["gunicorn", "--config=app.conf.py", "app:create"]
