fixing memory usage

--- a/kotlin/simple-api/Dockerfile
+++ b/kotlin/simple-api/Dockerfile
@@ -2,4 +2,4 @@ FROM amazoncorretto:20
 
 COPY ./build/libs/mtakeshi1.githut.io.simple-api-all.jar /simple-api.jar
 
-CMD ["java", "-jar", "/simple-api.jar"]
+CMD ["java", "-jar", "-Xmx4g", "-Xms4g", "/simple-api.jar"]
