--- a/python/jude/v1/requirements.txt
+++ b/python/jude/v1/requirements.txt
@@ -1,4 +1,5 @@
-psycopg[c]
-psycopg-pool
-python-rapidjson
-gunicorn
+gunicorn==20.1.0
+psycopg==3.1.8
+psycopg-c==3.1.8
+psycopg-pool==3.1.7
+python-rapidjson==1.10
