--- a/scala/scala-rest/Dockerfile
+++ b/scala/scala-rest/Dockerfile
@@ -2,4 +2,6 @@ FROM amazoncorretto:20
 
 COPY ./app/build/libs/app-all.jar /app-all.jar
 
+EXPOSE 8080
+
 CMD ["java", "-jar", "-Xmx4g", "-Xms4g", "/app-all.jar"]
