--- a/rust/axum_diesel/docker-compose.yaml
+++ b/rust/axum_diesel/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
     environment:
       RUST_LOG: info
       DATABASE_URL: postgres://root:root@products_db/public
+      MAX_POOL_SIZE: 30
     networks:
       - pg_network
 
